[gd_scene load_steps=9 format=3 uid="uid://cy8nluju7hwvu"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/StoreContainer/tier_unlock.gd" id="1_vyisu"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="2_pb30w"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="3_dud44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pcf7"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7haf2"]
color = Color(0.794121, 0.794121, 0.794121, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nd6ps"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rytt3"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u622"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[node name="TierUnlock" type="PanelContainer"]
script = ExtResource("1_vyisu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2pcf7")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="TitleBarLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "UNLOCK [TIER NAME]"
label_settings = ExtResource("2_pb30w")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_7haf2")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/HSeparator"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
theme_override_styles/separator = SubResource("StyleBoxLine_7haf2")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="ResourceContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextBtn" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/ResourceContainer" instance=ExtResource("3_dud44")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nd6ps")
icon = 30
is_disabled = false
title = "Resource"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BackBtn" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_dud44")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rytt3")
is_disabled = false
title = "Back"

[node name="ConfirmBtn" parent="MarginContainer/PanelContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_dud44")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0u622")
is_disabled = false
title = "Unlock"
